# Conecta-SENAI-main

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sonar-project.properties  start.sh
conecta_senai/: __init__.py  extensions.py  logging_conf.py  main.py  telemetry.py
conecta_senai/auth/: __init__.py  decorators.py  reset_routes.py  routes.py
conecta_senai/cli/: __init__.py  noticias.py
conecta_senai/config/: __init__.py  base.py  dev.py  prod.py  redis.py  test.py
conecta_senai/middlewares/: request_id.py
conecta_senai/models/: __init__.py  agendamento.py  audit_log.py  email_secretaria.py  horario.py  imagem_noticia.py  inscricao_treinamento.py  instrutor.py  laboratorio_turma.py  log_agendamento.py  log_rateio.py  manutencao_anexo.py  manutencao_basedados.py  manutencao_chamado.py  mixins.py  noticia.py  ocupacao.py  rateio.py  recurso.py  refresh_token.py  sala.py  secretaria_treinamentos.py  suporte_anexo.py  suporte_basedados.py  suporte_chamado.py  treinamento.py  user.py
conecta_senai/repositories/: log_rateio_repository.py  noticia_repository.py  user_repository.py
conecta_senai/routes/: __init__.py  inscricoes_treinamento.py  noticias.py  notificacao.py  user.py
conecta_senai/schemas/: __init__.py  horario.py  inscricao_treinamento.py  instrutor.py  noticia.py  noticia_validacao.py  ocupacao.py  rateio.py  sala.py  secretaria_treinamentos.py  (+2 more)
docs/: architecture.md  design-system.md
migrations/: alembic.ini  env.py  script.py.mako
scr/: __init__.py  main.py
scripts/: auto_migrate.sh
src/: __init__.py  main.py
static/: robots.txt  sitemap.xml
templates/: selecao-sistema.html
tests/: conftest.py  test_agendamento_routes.py  test_app_factory.py  test_audit_logs.py  test_basedados_horario.py  test_convocacao_route.py  test_email_service.py  test_export_routes.py  test_instrutor_routes.py  test_noticia_repository.py  test_noticia_schemas.py  test_noticia_service.py  test_noticias_calendar.py  test_ocupacao.py  test_password_validation.py  test_rateio_logs.py  test_sala_routes.py  test_secretaria_treinamentos_routes.py  test_suporte_visitante_routes.py  test_treinamento_emails.py  test_treinamento_routes.py  test_turma_routes.py  test_user_deletion_cascade.py  test_user_routes.py  test_utils.py
(+201 files in other folders)
