[project]
name = "agenda-senai"
version = "0.1.0"
description = ""
authors = [
    {name = "Codex",email = "codex@openai.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "flask (==3.1.1)",
    "flask-sqlalchemy (==3.1.1)",
    "sqlalchemy (==2.0.23)",
    "werkzeug (==3.1.3)",
    "python-dotenv (==1.0.0)",
    "pymysql (==1.1.1)",
    "psycopg2-binary (==2.9.10)",
    "cryptography (==45.0.5)",
    "gunicorn (==23.0.0)",
    "pyjwt (==2.10.1)",
    "reportlab (==4.0.8)",
    "openpyxl (==3.1.2)",
    "pydantic (==2.11.7)",
    "email-validator (==2.2.0)",
    "redis (==5.0.1)",
    "flask-limiter (==3.12)",
    "flask-migrate (==4.0.5)",
    "flask-jwt-extended (==4.6.0)"
    ,"requests (==2.31.0)"
    ,"flask-wtf (==1.2.1)"
    ,"apscheduler (==3.10.4)"
    ,"flasgger (==0.9.7.1)"
    ,"structlog (==25.5.0)"
    ,"python-json-logger (==4.0.0)"
    ,"sentry-sdk[flask] (==2.42.1)"
    ,"opentelemetry-sdk"
    ,"opentelemetry-instrumentation-flask"
    ,"opentelemetry-exporter-otlp"
    ,"resend (==2.13.1)"
]

[tool.poetry]
name = "agenda-senai"
version = "0.1.0"
description = "Agenda de laborat\u00f3rios e salas do SENAI"
authors = ["Codex <codex@openai.com>"]
readme = "README.md"
packages = [
    { include = "conecta_senai" },
    # Pacote de compatibilidade para ambientes que importam ``src``
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
flask = "3.1.1"
flask-sqlalchemy = "3.1.1"
sqlalchemy = "2.0.23"
werkzeug = "3.1.3"
python-dotenv = "1.0.0"
pymysql = "1.1.1"
psycopg2-binary = "2.9.10"
cryptography = "45.0.5"
gunicorn = "23.0.0"
pyjwt = "2.10.1"
reportlab = "4.0.8"
openpyxl = "3.1.2"
pydantic = "2.11.7"
email-validator = "2.2.0"
redis = "5.0.1"
flask-limiter = "3.12"
flask-migrate = "4.0.5"
flask-jwt-extended = "4.6.0"
flask-wtf = "1.2.1"
apscheduler = "3.10.4"
flasgger = "0.9.7.1"
structlog = "25.5.0"
python-json-logger = "4.0.0"
sentry-sdk = {version = "2.42.1", extras = ["flask"]}
opentelemetry-sdk = "*"
opentelemetry-instrumentation-flask = "*"
opentelemetry-exporter-otlp = "*"
resend = "2.13.1"
marshmallow = "3.21.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
